auto-commit 2025-10-22 10:22:42